# sem

./: .gitignore  README.md  SKILL.md  package.json
.github/workflows/: release.yml  test-windows.yml
crates/: README.md
crates/sem-api/: Cargo.toml
crates/sem-api/src/: main.rs
crates/sem-cli/: Cargo.toml
crates/sem-cli/src/: cache.rs  main.rs
crates/sem-cli/src/commands/: blame.rs  context.rs  diff.rs  entities.rs  graph.rs  impact.rs  log.rs  mod.rs  setup.rs  verify.rs
crates/sem-cli/src/formatters/: markdown.rs  mod.rs  plain.rs  terminal.rs
crates/sem-core/: Cargo.toml
crates/sem-core/src/git/: bridge.rs  jj.rs  mod.rs  types.rs
crates/sem-core/src/model/: change.rs  identity.rs
crates/sem-core/src/parser/: differ.rs  graph.rs  registry.rs  scope_resolve.rs  verify.rs
crates/sem-core/src/parser/plugins/: erb.rs  json.rs  svelte.rs  yaml.rs
crates/sem-core/src/parser/plugins/code/: entity_extractor.rs  languages.rs  mod.rs
crates/sem-core/src/utils/: hash.rs
crates/sem-core/tests/: graph_accuracy.rs
crates/sem-core/tests/fixtures/python/: api.py  auth.py  db.py  handlers.py
crates/sem-core/tests/fixtures/rust/: config.rs  main.rs  parser.rs  types.rs
crates/sem-mcp/: Cargo.toml
crates/sem-mcp/src/: cache.rs  main.rs  server.rs  tools.rs
docs/: agents.html  benchmarks.html  details.html  index.html
scripts/: postinstall.mjs  verify-checksum.mjs
site/src/app/: page.tsx
src/cli/commands/: diff.ts
src/git/: bridge.ts  diff-reader.ts  types.ts
src/model/: entity.ts  identity.ts
test/: rename.test.ts
