[package]
name = "sem-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sem-api"
path = "src/main.rs"

[dependencies]
sem-core = { path = "../sem-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
